--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@microsoft/signalr": "^8.0.7",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "rxjs": "~6.6.0",
     "secure-web-storage": "^1.0.2",
+    "signalr": "^2.4.3",
     "split-type": "^0.3.4",
     "three": "^0.168.0",
     "tslib": "^2.0.0",
